--- a/branches/of_to_rails3/app/views/news/_listn.html.erb
+++ b/branches/of_to_rails3/app/views/news/_listn.html.erb
@@ -1,7 +1,7 @@
 <% module_title = capture do -%>
   <%=link_to( image_tag('atom.png', 
        {:alt => 'atom', :width => '20px', :style => 'padding:8px;float:right'}),
-       {:controller => :news, :action => :new_project_news_feed, :format => :xml} )%>
+       {:controller => :rss, :format => :rss, :cont => 'project_news'} )%>
   <%=_('Project News')%>
 <% end -%>
 
@@ -18,10 +18,10 @@
 </ul>
 <%=link_to _('More...'), project_news_path(), :class => "more" %>
 <%=auto_discovery_link_tag(:rss,
-   {:format => :rss, :controller => :news, :action => :new_project_news_feed},
+   {:controller => :rss, :format => :rss, :cont => 'project_news'},
    {:title => s_("Feed|#{ _( 'Project News' ) } RSS Feed") } ) %>
 <%=auto_discovery_link_tag(:atom,
-   {:format => :xml, :controller => :news, :action => :new_project_news_feed},
+   {:controller => :rss, :format => :atom, :cont => 'project_news'},
    {:title => s_("Feed|#{ _( 'Project News' ) } ATOM Feed") } ) %>
 <% end -%>
 
