--- a/branches/of_to_rails3/app/views/projects/_new_projects.html.erb
+++ b/branches/of_to_rails3/app/views/projects/_new_projects.html.erb
@@ -1,7 +1,7 @@
 <% module_title = capture do -%>
   <%=link_to image_tag('atom.png', 
                {:alt => 'atom', :width => '20px', :style => 'padding:8px;float:right'}),
-               {:controller => :projects, :action => :new_projects_feed, :format => :xml} %>
+               {:controller => :rss, :format => :rss, :cont => 'new_project'} %>
   <%= _('New Projects') %>
 <% end -%>
 
@@ -16,10 +16,10 @@
 </ul>
 <%=link_to _('More...'), projects_path() + "?sortdesc=listing-created_at", :class => "more" %>
 <%=auto_discovery_link_tag(:rss, 
-   {:format => :rss, :controller => :projects, :action => :new_projects_feed},
+   {:controller => :rss, :format => :rss, :cont => 'new_project'},
    { :title => _( "Feed|#{ _( 'New Projects' ) } RSS Feed" ) } ) %>
 <%=auto_discovery_link_tag(:atom, 
-   {:format => :xml, :controller => :projects, :action => :new_projects_feed},
+   {:controller => :rss, :format => :atom, :cont => 'new_project'},
    { :title => _( "Feed|#{ _( 'New Projects' ) } ATOM Feed" ) } ) %>
 <% end -%>
 
