--- a/branches/of_to_rails3/app/views/releases/_new_releases.html.erb
+++ b/branches/of_to_rails3/app/views/releases/_new_releases.html.erb
@@ -2,7 +2,7 @@
   <%=link_to( 
      image_tag('atom.png', 
           {:alt => 'atom', :width => '20px', :style => 'padding:8px;float:right'}),
-     {:controller => :releases, :action => :new_release_feed, :format => :xml}) %>
+          {:controller => :rss, :format => :rss, :cont => 'new_release'}) %>
   <%= _("Latest Releases") %>
 <% end -%>
 
@@ -17,11 +17,11 @@
 </ul>
 <%= link_to _("More..."), {:controller => 'releases', :action => 'latest'}, :class => "more" %>
 <%=auto_discovery_link_tag(:rss,
-   {:format => :rss, :controller => :releases, :action => "new_release_feed"},
-   { :title => s_( "Feed|#{ _( 'Lastest Releases' ) } RSS Feed" ) } ) %>
+   {:controller => :rss, :format => :rss, :cont => 'new_release'},
+   { :title => s_( "Feed|#{ _( 'Latest Releases' ) } RSS Feed" ) } ) %>
 <%=auto_discovery_link_tag(:atom,
-   {:format => :xml, :controller => :releases, :action => "new_release_feed"},
-   { :title => s_( "Feed|#{ _( 'Lastest Releases' ) } ATOM Feed" ) } ) %>
+   {:controller => :rss, :format => :atom, :cont => 'new_release'},
+   { :title => s_( "Feed|#{ _( 'Latest Releases' ) } ATOM Feed" ) } ) %>
 <% end -%>
 
 <%= render :file => 'layouts/rt_module', :locals => {:module_title => module_title, :module_content => module_content, :variation => 'square1'} %>
