Cleanup the code for ujs.

--- a/branches/of_to_rails3/app/views/site_admin/site_admin/manage_tags.html.erb
+++ b/branches/of_to_rails3/app/views/site_admin/site_admin/manage_tags.html.erb
@@ -1,8 +1,8 @@
 <% content_for :page_head do%>
 <%=stylesheet_link_tag 'jquery.tablesorter.pager', 'jquery.color' %>
-<%=javascript_include_tag 'jquery' %>
 <%=javascript_include_tag 'jquery.tablesorter' %>
 <%=javascript_include_tag 'jquery.tablesorter.pager' %>
+<% end %>
 
 <style type="text/css">
   td.operator div img
