Make the path flexible with the root path variable.

--- a/branches/of_to_rails3/app/views/site_admin/site_admin/manage_tags.html.erb
+++ b/branches/of_to_rails3/app/views/site_admin/site_admin/manage_tags.html.erb
@@ -233,11 +233,11 @@
       </td>
 
       <td rowspan="2" class="operator">
-        <div><img src="/of/images/tagmsg/add.png" title="新增" class="create"></div>
-        <div><img src="/of/images/tagmsg/delete.png" title="刪除" class="delete"></div>
-        <div><img src="/of/images/tagmsg/edit.png" title="編輯" class="edit"></div>
-        <div><img src="/of/images/tagmsg/toready.png" title="READY" class="ready"></div>
-        <div><img src="/of/images/tagmsg/topending.png" title="PENDING" class="pending"></div>
+        <div><img src="<%="#{root_path}"%>/images/tagmsg/add.png" title="新增" class="create"></div>
+        <div><img src="<%="#{root_path}"%>/images/tagmsg/delete.png" title="刪除" class="delete"></div>
+        <div><img src="<%="#{root_path}"%>/images/tagmsg/edit.png" title="編輯" class="edit"></div>
+        <div><img src="<%="#{root_path}"%>/images/tagmsg/toready.png" title="READY" class="ready"></div>
+        <div><img src="<%="#{root_path}"%>/images/tagmsg/topending.png" title="PENDING" class="pending"></div>
       </td>
 
       <td width="400">
@@ -274,10 +274,10 @@
         <div id="pdpager" class="pager" <%="style=\"display: none;\"" if ptg.empty? %>>
           <div class="pagedisplay" style="float: left;"></div>
           <div style="text-align: right;">
-            <img src="/of/images/tablepager/first.png" class="first"/>
-            <img src="/of/images/tablepager/prev.png" class="prev"/>
-            <img src="/of/images/tablepager/next.png" class="next" name="pdtablepager"/>
-            <img src="/of/images/tablepager/last.png" class="last"/>
+            <img src="<%="#{root_path}"%>/images/tablepager/first.png" class="first"/>
+            <img src="<%="#{root_path}"%>/images/tablepager/prev.png" class="prev"/>
+            <img src="<%="#{root_path}"%>/images/tablepager/next.png" class="next" name="pdtablepager"/>
+            <img src="<%="#{root_path}"%>/images/tablepager/last.png" class="last"/>
             <input type="hidden" class="pagesize" value="10">
           </div>
         </div>
@@ -287,10 +287,10 @@
         <div id="rdpager" class="pager" <%="style=\"display: none;\"" if rtg.empty? %>>
           <div class="pagedisplay" style="float: left;"></div>
           <div style="text-align: right;">
-            <img src="/of/images/tablepager/first.png" class="first"/>
-            <img src="/of/images/tablepager/prev.png" class="prev"/>
-            <img src="/of/images/tablepager/next.png" class="next" name="rdtablepager"/>
-            <img src="/of/images/tablepager/last.png" class="last"/>
+            <img src="<%="#{root_path}"%>/images/tablepager/first.png" class="first"/>
+            <img src="<%="#{root_path}"%>/images/tablepager/prev.png" class="prev"/>
+            <img src="<%="#{root_path}"%>/images/tablepager/next.png" class="next" name="rdtablepager"/>
+            <img src="<%="#{root_path}"%>/images/tablepager/last.png" class="last"/>
             <input type="hidden" class="pagesize" value="10">
           </div>
         </div>
