--- a/branches/of_to_rails3/app/views/partials/_home_menu.html.erb
+++ b/branches/of_to_rails3/app/views/partials/_home_menu.html.erb
@@ -10,11 +10,11 @@
   <% end -%>
   <li><%#= link_to _('menu_Project Listing'), projects_path %></li>
   <li><%#= link_to _('menu_Project Category'), category_index_path  %></li>
-	<li><%=link_to t( 'Menu.Category' ), list_category_path() %></li>
-  <li><%= link_to _('menu_Project News'), project_news_path() %></li>
+	<li><%= link_to t( 'Menu.Category' ), list_category_index_path() %></li>
+  <li><%= link_to _('menu_Project News'), home_project_news_path() %></li>
   <li><%#= link_to _('menu_Latest Releases'), latest_releases_path %></li>
   <li><%#= link_to _('menu_Top Downloads'), top_releases_path %></li>
-  <li><%= link_to _('menu_Help Wanted'), "#{ root_path }jobs" %> </li>
+  <li><%= link_to _('menu_Help Wanted'), jobs_path %> </li>
   <li><%= link_to _('menu_WebHosting'), "/tw/help/2356-openfoundry-web-hosting" %></li>
   <li class="parent active"><a href='#' onClick="Effect.toggle('bsc_menu0', 'blind', {duration: 0.3}); return false"><%= _('Help') %></a>
   <div id="bsc_menu0" style="display:none">
