--- a/branches/of_to_rails3/app/views/projects/_list.html.erb
+++ b/branches/of_to_rails3/app/views/projects/_list.html.erb
@@ -30,7 +30,7 @@
         <tr>
           <td class="imgarea"> 
             <a href="<%= url_for(:action => 'show', :id => project.id) %>">
-              <img src="<%= url_for(:controller => :images,:action => "cached_image", :id => "#{project.icon}_64") %>" align="center" alt="<%= _('Project Logo') %>" title="<%= h(project.summary) %>"/>
+              <img src="<%= cached_image_images_path(:id => "#{project.icon}_64") %>" align="center" alt="<%= _('Project Logo') %>" title="<%= h(project.summary) %>"/>
             </a>
           </td>
           <td class="txtarea">
