--- a/branches/of_to_rails3/app/views/projects/_most_active.html.erb
+++ b/branches/of_to_rails3/app/views/projects/_most_active.html.erb
@@ -1,5 +1,5 @@
 <h3>
-    <%= image_tag "of/icon06.gif", :align => "left" %>
+  <%= image_tag "#{root_path}/icon06.gif", :align => "left" %>
     <%=_('Most Active')%>
 </h3>
 <ul>
