--- a/branches/of_to_rails3/app/views/projects/_project_issues.html.erb
+++ b/branches/of_to_rails3/app/views/projects/_project_issues.html.erb
@@ -1,7 +1,7 @@
 <% if rss and not rss.items.blank? %>
   <table>
     <% rss.items.each do | item | %>
-      <tr><td><a href="http://<%=SSO_HOST %>/of/projects/<%=item.dc_description %>/rt/<%=item.link %>"><%= h item.title %></a></td></tr>
+      <tr><td><a href="http://<%=OPENFOUNDRY_HOST+root_path%>/projects/<%=item.dc_description %>/rt/<%=item.link %>"><%= h item.title %></a></td></tr>
 
       <tr>
         <td>
