--- a/branches/of_to_rails3/app/views/projects/_form.html.erb
+++ b/branches/of_to_rails3/app/views/projects/_form.html.erb
@@ -1,8 +1,10 @@
 <%# https://sourceforge.net/register-project %>
 <%# http://code.google.com/hosting/createProject %>
 
-<%=stylesheet_link_tag 'jquery.autocomplete', 'jquery.simpledialog' %>
-<%=javascript_include_tag 'jquery', 'jquery.autocomplete', 'jquery.simpledialog' %>
+<% content_for :page_head do %>
+  <%=stylesheet_link_tag 'jquery.autocomplete', 'jquery.simpledialog' %>
+  <%=javascript_include_tag 'jquery.autocomplete', 'jquery.simpledialog' %>
+<% end %>
 
 <style type="text/css">
   .tagged
@@ -24,7 +26,7 @@
 </style>
 
 <script type="text/javascript">
-  var $j = jQuery.noConflict();
+  var $j = jQuery;
 
   // check added tag is duplicated or not
   function add_to_tags_list()
@@ -171,9 +173,9 @@ AAA
   choosen_licenses = (@project.license || "").split(",").grep(/./).map(&:to_i)
   tmp_licenses = ""
   Project::LICENSE_DISPLAY_KEYS.each do |i|
-    tmp_licenses += check_box_tag("project[license][#{i}]", i, choosen_licenses.include?(i)) + ( i > 0 ? link_to( Project.license_to_s(i), _("url_link_for_#{Project.license_to_s(i).gsub('.', '_')}"), :target =>"_blank" ) : t(Project.license_to_s(i)) ) + "<br>\n"
+    tmp_licenses += check_box_tag("project[license][#{i}]", i, choosen_licenses.include?(i)) + ( i > 0 ? link_to( Project.license_to_s(i), _("url_link_for_#{Project.license_to_s(i).gsub('.', '_')}"), :target =>"_blank" ) : t(Project.license_to_s(i)) ) + raw("<br>\n")
   end
-  tmp_licenses = "<div style=\"height: 150px; overflow: auto\">#{tmp_licenses}</div>"
+  tmp_licenses = raw("<div style=\"height: 150px; overflow: auto\">#{tmp_licenses}</div>")
 %>
 <%
   choosen_contentlicenses = (@project.contentlicense || "").split(",").grep(/./).map(&:to_i)
@@ -181,15 +183,15 @@ AAA
   Project::CONTENT_LICENSE_DISPLAY_KEYS.each do |i|
     txt = Project.content_license_to_s(i)
     txt += " " + cc_images(i)
-    tmp_contentlicenses += check_box_tag("project[contentlicense][#{i}]", i, choosen_contentlicenses.include?(i)) + ( i > 0 ? link_to( Project.content_license_to_s(i), _("url_link_for_#{Project.content_license_to_s(i)}"), :target => "_blank" ) : t(Project.content_license_to_s(i)) ) + "<br>\n"
+    tmp_contentlicenses += check_box_tag("project[contentlicense][#{i}]", i, choosen_contentlicenses.include?(i)) + ( i > 0 ? link_to( Project.content_license_to_s(i), _("url_link_for_#{Project.content_license_to_s(i)}"), :target => "_blank" ) : t(Project.content_license_to_s(i)) ) + raw("<br/>\n")
   end
-  tmp_contentlicenses = "<div style=\"height: 150px; overflow: auto\">#{tmp_contentlicenses}</div>"
+  tmp_contentlicenses = raw("<div style=\"height: 150px; overflow: auto\">#{tmp_contentlicenses}</div>")
 %>
 <%
   tmp_nsccode = @project.tag_list.names.grep(/^NSC/).sort.join(", ")
 %>
 <table class="form-table">
-<%=  rows(
+<%=raw rows(
   foo("name", true, _("Project|Name|Help")),
     text_field('project', 'name', :disabled => (is_edit == true), :maxlength => 15, :style => 'width:15em'),
   foo("summary", true, _("Project|Summary|Help")),
