--- a/branches/of_to_rails3/app/views/projects/applied.html.erb
+++ b/branches/of_to_rails3/app/views/projects/applied.html.erb
@@ -1,1 +1,1 @@
-<%= "#{t("Project Applied")}<br/>#{OPENFOUNDRY_SITE_ADMIN_EMAIL}." %>
+<%= raw("#{t("Project Applied")}<br/>#{OPENFOUNDRY_SITE_ADMIN_EMAIL}.") %>
